force-app/main/default/objects/AgentGov_Limit_Config__mdt/AgentGov_Limit_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configurable governor limit thresholds and default budgets for the AgentGov framework.</description>
    <label>AgentGov Limit Config</label>
    <pluralLabel>AgentGov Limit Configs</pluralLabel>
</CustomObject>