force-app/main/default/objects/AgentGov_Limit_Config__mdt/fields/Block_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Block_Threshold__c</fullName>
    <defaultValue>95</defaultValue>
    <description>Percentage threshold for blocking</description>
    <label>Block Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>