force-app/main/default/objects/AgentGov_Limit_Config__mdt/fields/Default_Daily_Budget__c.field-meta.xml
<CustomField>
    <fullName>Default_Daily_Budget__c</fullName>
    <description>Default daily budget allocation for this limit type</description>
    <label>Default Daily Budget</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>