force-app/main/default/objects/AgentGov_Limit_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Unchecked, this record is ignored and its limit type uses the built-in defaults: thresholds of 80, 90 and 95 percent and a default daily budget of 10,000 API calls, 5,000 SOQL queries or 3,000 DML operations. It does not turn the limit off.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>