force-app/main/default/objects/AgentGov_Limit_Config__mdt/fields/Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type__c</fullName>
    <description>Type of governor limit (e.g., API_Calls, SOQL_Queries, DML_Operations)</description>
    <label>Limit Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>