force-app/main/default/objects/AgentGov_Limit_Config__mdt/fields/Throttle_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Throttle_Threshold__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Whole percentage of the daily allocation at which this limit type turns the agent's budget status to Throttled and raises a Throttle alert. Requests are still allowed; they are refused from the Block threshold.</description>
    <label>Throttle Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>