force-app/main/default/objects/AgentGov_Limit_Config__mdt/fields/Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Warning_Threshold__c</fullName>
    <defaultValue>80</defaultValue>
    <description>Percentage threshold for warning alerts</description>
    <label>Warning Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>